@startuml ER diagram
left to right direction

entity "policies" as policies {
  + id : uuid
  --
  state : boolean
  revokable : boolean
  type_id : uuid
  content : text
}

entity "type" as type {
  + id : uuid
  --
  title : varchar
}

entity "consents" as consents {
  + id : uuid
  --
  ext_user_id : uuid // user id from the external system
  consent_id : uuid
  timestamp : datetime
  action_type : varchar [sign/revoke]
}

entity "admin_log" as admin_log {
  + id : uuid
  --
  ext_admin_id : uuid // id of the admin from the external system 
  consent_id : uuid
  change_date : datetime
  action : text // Operation type according to CRUD
  ip_address : inet 
}
note right of admin_log
  since microservice is in the company environment, 
  it's necessary to cast real IP of the admin
end note

consent::id ||..o{ signed::consent_id : 1:n
type::id ||..o{ consent::type_id : 1:n
consent::id ||..o{ history::consent_id : 1:n
consent::id ||..o{ admin_log::consent_id : 1:n

@enduml